[gd_scene load_steps=9 format=3 uid="uid://lo5teb063msv"]

[ext_resource type="StyleBox" uid="uid://dwxqhhtunho3f" path="res://ui/resources/dialog_styles.tres" id="1_hv0ba"]
[ext_resource type="Script" uid="uid://bwe0nhkqvgq4s" path="res://ui/views/stop-popup-view/stop_popup_view.gd" id="2_u3muj"]
[ext_resource type="Texture2D" uid="uid://ch7h2yiicuahf" path="res://assets/ui_icons/keep_off.png" id="3_bhyp4"]
[ext_resource type="Texture2D" uid="uid://colv4c8bi5jc0" path="res://assets/ui_icons/close.png" id="4_dxvfw"]
[ext_resource type="PackedScene" uid="uid://c04rhuwgif41s" path="res://ui/components/value_list_item/value_list_item.tscn" id="5_17dye"]

[sub_resource type="LabelSettings" id="LabelSettings_i6erg"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_lfgir"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_dogxe"]
font_size = 12
font_color = Color(0.641934, 0.641934, 0.641934, 1)

[node name="StopPopupView" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = -752.0
offset_bottom = -407.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_hv0ba")
script = ExtResource("2_u3muj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MainFlowContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
vertical = true

[node name="HeaderBoxContainer" type="BoxContainer" parent="MarginContainer/MainFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StopNameLabel" type="Label" parent="MarginContainer/MainFlowContainer/HeaderBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Terminal #0"

[node name="PinButton" type="Button" parent="MarginContainer/MainFlowContainer/HeaderBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_bhyp4")
flat = true

[node name="CloseButton" type="Button" parent="MarginContainer/MainFlowContainer/HeaderBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("4_dxvfw")
flat = true

[node name="MainContentContainer" type="BoxContainer" parent="MarginContainer/MainFlowContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainFlowContainer/MainContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="ContentWrapper" type="BoxContainer" parent="MarginContainer/MainFlowContainer/MainContentContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
vertical = true

[node name="LineTagsContainer" type="BoxContainer" parent="MarginContainer/MainFlowContainer/MainContentContainer/MarginContainer/ContentWrapper"]
layout_mode = 2

[node name="PassengersOverview" type="BoxContainer" parent="MarginContainer/MainFlowContainer/MainContentContainer/MarginContainer/ContentWrapper"]
layout_mode = 2
vertical = true

[node name="Label" type="Label" parent="MarginContainer/MainFlowContainer/MainContentContainer/MarginContainer/ContentWrapper/PassengersOverview"]
layout_mode = 2
text = "Passengers"
label_settings = SubResource("LabelSettings_i6erg")

[node name="TotalWaitingLabel" parent="MarginContainer/MainFlowContainer/MainContentContainer/MarginContainer/ContentWrapper/PassengersOverview" instance=ExtResource("5_17dye")]
layout_mode = 2
init_label_text = "Total waiting:"

[node name="TimeTillBoredLabel" parent="MarginContainer/MainFlowContainer/MainContentContainer/MarginContainer/ContentWrapper/PassengersOverview" instance=ExtResource("5_17dye")]
layout_mode = 2
init_label_text = "Lowest time till bored:"

[node name="DeparturesWrapper" type="BoxContainer" parent="MarginContainer/MainFlowContainer/MainContentContainer/MarginContainer/ContentWrapper"]
layout_mode = 2
size_flags_vertical = 3
vertical = true

[node name="Label" type="Label" parent="MarginContainer/MainFlowContainer/MainContentContainer/MarginContainer/ContentWrapper/DeparturesWrapper"]
layout_mode = 2
text = "Departures"
label_settings = SubResource("LabelSettings_lfgir")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainFlowContainer/MainContentContainer/MarginContainer/ContentWrapper/DeparturesWrapper"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="DeparturesContainer" type="BoxContainer" parent="MarginContainer/MainFlowContainer/MainContentContainer/MarginContainer/ContentWrapper/DeparturesWrapper/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="NoDeparturesLabel" type="Label" parent="MarginContainer/MainFlowContainer/MainContentContainer/MarginContainer/ContentWrapper/DeparturesWrapper"]
layout_mode = 2
size_flags_vertical = 6
text = "No departures from this stop"
label_settings = SubResource("LabelSettings_dogxe")
horizontal_alignment = 1
vertical_alignment = 1
